--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="Styles.css">
     <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
 
-    <title>Hello, world!</title>
+    <title>Hello, Kwench!</title>
   </head>
   <body>
     <nav>
